--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -12426,7 +12426,11 @@ hr.divider-light {
   }
 }
 
-header.masthead {
+.text-blue {
+  color: #007eb3;
+}
+
+.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to top, #00273850, #005a8040), url('../img/bg-masthead.jpg');
@@ -12614,4 +12618,64 @@ header.masthead .h1 {
   background-color: #005a80;
   border-radius: 8px;
   border: 3px solid #d1d1d1;
+}
+
+.spinner {
+  position: relative;
+  margin: 30px auto 0;
+  box-sizing: border-box;
+  background-clip: padding-box;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  border: 4px solid rgba(255, 255, 255, 0.1);
+  -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);
+  transform-origin: 50% 60%;
+  animation: spinner-wiggle 1.2s infinite;
+}
+
+
+
+.spinner:before,
+.spinner:after {
+  content: "";
+  position: absolute;
+  margin: -4px;
+  box-sizing: inherit;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  opacity: .05;
+  border: inherit;
+  border-color: transparent;
+  animation: spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, spinner-fade 1.2s linear infinite;
+}
+
+.spinner:before {
+  border-top-color: #66e6ff;
+}
+
+.spinner:after {
+  border-top-color: #f0db75;
+  animation-delay: 0.3s;
+}
+
+@keyframes spinner-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner-fade {
+  20% {
+    opacity: .1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: .1;
+  }
 }
