--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -12431,7 +12431,7 @@ hr.divider-light {
 }
 
 .masthead {
-  /* padding-top: 10rem; */
+  padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to top, #00273850, #005a8040), url('../img/bg-masthead.jpg');
   background-position: center;
