--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -12569,6 +12569,7 @@ header.masthead .h1 {
   scroll-snap-align: center;
   transition: all .3s;
   border-style: none;
+  height: 80px;
 }
 
 .card__conocimiento {
