Se finalizo la seccion de Portfolio del index

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -657,6 +657,9 @@ progress {
 .img-fluid {
   max-width: 100%;
   height: auto;
+  margin: auto;
+  background-size: cover;
+  background-position: center center;
 }
 
 .img-thumbnail {
